Added static files

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,6 +1,9 @@
+{% load static %}
+
 <html>
     <head>
-        <title>Blog Django Girls</title>
+        <title>Blog Django</title>
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
         <div>
