--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,10 +3,12 @@
 {% block content %}
     {% for post in posts %}
         <div class="post">
+            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+            {% if post.published_date %}
             <div class="date">
                 {{ post.published_date }}
             </div>
-            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+            {% endif %}
             <p>{{ post.text|linebreaksbr }}</p>
         </div>
     {% endfor %}
