added like and dislike function

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,3 +1,4 @@
+
 .page-header {
     background-color: #C25100;
     margin-top: 0;
@@ -45,3 +46,8 @@ h1, h2, h3, h4 {
 .post h2 a, .post h2 a:visited {
     color: #000000;
 }
+
+.comment {
+    margin: 20px 0px 20px 20px;
+}
+
