--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,11 +7,47 @@
     <div class="date">
         {{ post.published_date }}
     </div>
+    {% else %}
+    <a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
     {% endif %}
     {% if user.is_authenticated %}
     <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span
             class="glyphicon glyphicon-pencil"></span></a>
+    <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}"><span
+            class="glyphicon glyphicon-remove"></span></a>
     {% endif %}
     <p>{{ post.text|linebreaksbr }}</p>
+    <div class="vote-section" style="display: flex; height: auto; width: 110px; justify-content: space-between; align-items: center;">
+        <div style="text-align: center; font-weight: bold;">
+            <img src="https://rerollcdn.com/GENSHIN/Skills/2021/Fantastic_Voyage.png" style="margin-bottom: 10px;">
+            <p>50%</p>
+        </div>
+        <div style="text-align: center; font-weight: bold;">
+            <img src="https://rerollcdn.com/GENSHIN/Skills/2021/Fantastic_Voyage.png" style="transform: rotate(180deg); margin-bottom: 10px;">
+            <p>50%</p>
+        </div>
+    </div>
+    <hr>
+    
+    {% for comment in post.comments.all %}
+    {% if user.is_authenticated or comment.approved_comment %}
+    <div class="comment">
+        <div class="date">
+            {{ comment.created_date }}
+            {% if not comment.approved_comment %}
+            <a class="btn btn-default" href="{% url 'comment_remove' pk=comment.pk %}"><span
+                    class="glyphicon glyphicon-remove"></span></a>
+            <a class="btn btn-default" href="{% url 'comment_approve' pk=comment.pk %}"><span
+                    class="glyphicon glyphicon-ok"></span></a>
+            {% endif %}
+        </div>
+        <strong>{{ comment.author }}</strong>
+        <p>{{ comment.text|linebreaks }}</p>
+    </div>
+    {% endif %}
+    {% empty %}
+    <p>No comments here yet :(</p>
+    {% endfor %}
+    <a class="btn btn-default" href="{% url 'add_comment_to_post' pk=post.pk %}">Add comment</a>
 </div>
 {% endblock %}
