--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,15 +1,32 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    {% for post in posts %}
-        <div class="post">
-            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
-            {% if post.published_date %}
-            <div class="date">
-                {{ post.published_date }}
-            </div>
-            {% endif %}
-            <p>{{ post.text|linebreaksbr }}</p>
+{% for post in posts %}
+<div class="post">
+    <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+    {% if post.published_date %}
+    <div class="date">
+        {{ post.published_date }}
+    </div>
+    {% endif %}
+    <p>{{ post.text |linebreaksbr }}</p>
+    <div class="vote-section"
+        style="display: flex; height: auto; width: 110px; justify-content: space-between; align-items: center;">
+        <div style="text-align: center; font-weight: bold;">
+            <a href="{% url 'add_reaction' pk=post.pk reaction_type='like' %}"><img
+                    src="https://rerollcdn.com/GENSHIN/Skills/2021/Fantastic_Voyage.png"
+                    style="margin-bottom: 10px;"></a>
+            <p>{{ post.likeCount }}</p>
         </div>
-    {% endfor %}
+        <div style="text-align: center; font-weight: bold;">
+            <a href="{% url 'add_reaction' pk=post.pk reaction_type='dislike' %}">
+                <img src="https://rerollcdn.com/GENSHIN/Skills/2021/Fantastic_Voyage.png"
+                    style="transform: rotate(180deg); margin-bottom: 10px;">
+            </a>
+            <p>{{ post.dislikeCount }}</p>
+        </div>
+    </div>
+    <a href="{% url 'post_detail' pk=post.pk %}">See Comments {{ post.approved_comments.count }}</a>
+</div>
+{% endfor %}
 {% endblock %}
