--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -17,14 +17,17 @@
             class="glyphicon glyphicon-remove"></span></a>
     {% endif %}
     <p>{{ post.text|linebreaksbr }}</p>
-    <div class="vote-section" style="display: flex; height: auto; width: 110px; justify-content: space-between; align-items: center;">
-        <div style="text-align: center; font-weight: bold;">
-            <img src="https://rerollcdn.com/GENSHIN/Skills/2021/Fantastic_Voyage.png" style="margin-bottom: 10px;">
-            <p>50%</p>
+    <div id="vote-section">
+        <div>
+            <a href="{% url 'add_reaction' pk=post.pk reaction_type='like' %}"><img
+                    src="https://rerollcdn.com/GENSHIN/Skills/2021/Fantastic_Voyage.png"></a>
+            <p>{{ post.likeCount }}</p>
         </div>
-        <div style="text-align: center; font-weight: bold;">
-            <img src="https://rerollcdn.com/GENSHIN/Skills/2021/Fantastic_Voyage.png" style="transform: rotate(180deg); margin-bottom: 10px;">
-            <p>50%</p>
+        <div>
+            <a href="{% url 'add_reaction' pk=post.pk reaction_type='dislike' %}">
+                <img id="dislikeButton" src="https://rerollcdn.com/GENSHIN/Skills/2021/Fantastic_Voyage.png">
+            </a>
+            <p>{{ post.dislikeCount }}</p>
         </div>
     </div>
     <hr>
