--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -71,3 +71,9 @@ h1, h2, h3, h4 {
 #dislikeButton{
     transform: rotate(180deg);
 }
+
+.reaction_percentage{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
