--- a/stats/templates/stats/champion_stats.html
+++ b/stats/templates/stats/champion_stats.html
@@ -2,20 +2,20 @@
 
 {% block content %}
 <div id="filters" class="d-flex justify-content-between">
-    <a href="{% url 'champion_stats'%}"><button type="button" class="btn btn-secondary">All</button></a>
-    <a href="{% url 'champion_stats' sort_type='Winrate' class_filter='Damage'%}"><button type="button"
+    <a href="{% url 'get_champion_stats'%}"><button type="button" class="btn btn-secondary">All</button></a>
+    <a href="{% url 'get_champion_stats' sort_type='winrate' class_filter='Damage'%}"><button type="button"
             class="btn btn-secondary">Damage</button></a>
-    <a href="{% url 'champion_stats' sort_type='Winrate' class_filter='Frontline'%}"><button type="button"
+    <a href="{% url 'get_champion_stats' sort_type='winrate' class_filter='Frontline'%}"><button type="button"
             class="btn btn-secondary">Frontline</button></a>
-    <a href="{% url 'champion_stats' sort_type='Winrate' class_filter='Flank'%}"><button type="button"
+    <a href="{% url 'get_champion_stats' sort_type='winrate' class_filter='Flank'%}"><button type="button"
             class="btn btn-secondary">Flank</button></a>
-    <a href="{% url 'champion_stats' sort_type='Winrate' class_filter='Support'%}"><button type="button"
+    <a href="{% url 'get_champion_stats' sort_type='winrate' class_filter='Support'%}"><button type="button"
             class="btn btn-secondary">Support</button></a>
-    <a href="{% url 'champion_stats' sort_type='Match_Count' class_filter='All'%}"><button type="button"
+    <a href="{% url 'get_champion_stats' sort_type='match_count' class_filter='All'%}"><button type="button"
             class="btn btn-secondary">Match Count</button></a>
-    <a href="{% url 'champion_stats' sort_type='Winrate' class_filter='All'%}"><button type="button"
+    <a href="{% url 'get_champion_stats' sort_type='winrate' class_filter='All'%}"><button type="button"
             class="btn btn-secondary">Winrate</button></a>
-    <a href="{% url 'champion_stats' sort_type='Alfabetic' class_filter='All'%}"><button type="button"
+    <a href="{% url 'get_champion_stats' sort_type='name' class_filter='All'%}"><button type="button"
             class="btn btn-secondary">Alfabetic</button></a>
 </div>
 <table class="table table-hover table-dark mt-4 shadow border border-dark rounded">
@@ -35,12 +35,11 @@
                 src="https://static.wikia.nocookie.net/paladins_gamepedia/images/c/cc/Class_Damage_Icon.png/revision/latest/scale-to-width-down/32?cb=20180320020552"
                 alt="" srcset=""></td>
         <td class="text-justify"><img class="rounded-circle" style="width: 30px; height: 30px; margin-right: 10px;"
-                src="https://paladinsdecks.com/fileadmin/paladins/_processed_/e/4/csm_2093_4d78d0f2cf.jpg">{{i.Champion}}
+                src="https://paladinsdecks.com/fileadmin/paladins/_processed_/e/4/csm_2093_4d78d0f2cf.jpg">{{i.name}}
         </td>
-        <td class="text-justify">{{i.Winrate}}</td>
-        <td class="text-justify">{{i.Talent}}</td>
-        <td class="text-justify">{{i.Match_Count}}</td>
-
+        <td class="text-justify">{{ i.winrate }}</td>
+        <td class="text-justify">{{i.talent}}</td>
+        <td class="text-justify">{{i.match_count}}</td>
     </tr>
 
     {% endfor %}
