--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,96 +1,52 @@
-.btn-secondary{
-    background-color: #212529;
-}
-
-.page-header {
-    margin-top: 0;
-    padding: 20px 20px 20px 40px;
-    background-color: #212529;
-    border-bottom: #36384A solid 2px;
-    
-}
-
-.page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #ffffff;
-    font-size: 36pt;
-    text-decoration: none;
-}
-
-.content {
-    margin-left: 40px;
-}
-
-h1, h2, h3, h4 {
+*{
+    color:aliceblue;
     font-family: 'Roboto', sans-serif;
 }
 
-.date {
-    display: inline-block;
-    color: #828282;
+.ml-4{
+    margin-left: 10px !important;
 }
 
-.save {
-    float: right;
+.mr-4{
+    margin-right: 10px !important;
 }
 
-.post-form textarea, .post-form input {
-    width: 100%;
+.icons-default{
+    max-height: 30px;
+    color: aliceblue;
 }
 
-.top-menu, .top-menu:hover, .top-menu:visited {
-    color: #ffffff;
-    float: right;
-    font-size: 26pt;
-    margin-right: 20px;
+#arrow-up{
+    max-height: 30px;
 }
 
-.post {
-    margin-bottom: 70px;
-}
-
-.post h2 a, .post h2 a:visited {
-    color: #000000;
-}
-
-.comment {
-    margin: 20px 0px 20px 20px;
-}
-
-#vote-section{
-    display: flex;
-    height: auto;
-    width: 110px;
-    justify-content: space-between;
-    align-items: left;
-}
-
-#vote-section>div{
-    text-align: center;
-    font-weight: bold;
-}
-
-#vote-section>div img{
-    margin-bottom: 5px;
-}
-
-#dislikeButton{
+#arrow-down{
+    max-height: 30px;
     transform: rotate(180deg);
 }
 
-.reaction_percentage{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+input[type=text]{
+    color: black;
 }
 
-body{
-    background-color: #1D1F29;
+textarea{
+    color: black;
 }
 
-.table{
-    background-color: #222431;
+.btn-secondary {
+    background-color: #212529 !important;
 }
 
-button{
-    background-color: #222431;
+.bg-primary{
+    background-color: #1D1F29 !important;
 }
+
+.bg-secondary{
+    background-color: #212529 !important;
+}
+
+a {
+    text-decoration: none;
+    color: aliceblue;
+}
+
