--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -2,35 +2,55 @@
 <html>
 
 <head>
-    <title>Django blog</title>
+    <title>Paladins Stats</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+    <link rel="icon" type="image/png" href="../../static/img/favicon.png">
 </head>
 
-<body>
-    <div class="page-header mb-4">
-        {% if user.is_authenticated %}
-        <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-        <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
-        <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
-        {% else %}
-        <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
-        {% endif %}
-        <h1><a href="/">Paladins Stats</a></h1>
+<body class="bg-primary">
+    <nav class="bg-dark mb-4 p-2">
+        <div class="container">
+            <div class="row">
+                <div class="col-3 offset-1">
+                    <img class="icons-default navbar-brand" src="../../static/img/favicon.png"
+                        alt="Logo showing a graphic bar style">
+                    <a class="" href="/">Paladins Stats</a>
+                </div>
+                <div class="col d-flex justify-content-end">
+                    <a class=" ml-4" href="/">Blog</a>
+                    <a class=" ml-4" href="/stats">Stats</a>
+                    {% if user.is_authenticated %}
+                    <a class=" ml-4" href="{% url 'post_new' %}"><img class="icons-default"
+                            src="../../static/img/add_post.png" alt="Add post" srcset=""></a>
+                    <a class=" ml-4" href="{% url 'post_draft_list' %}"><img src="../../static/img/post_draft.png"
+                            alt="Draft Posts" class="icons-default"></a>
+                    <span class=" ml-4">{{ user.username }}</span>
+                    <a class="" href="{% url 'logout' %}">( Log out )</a>
+                    {% else %}
+                    <a class=" ml-4" href="{% url 'login' %}">Login</a>
+                    {% endif %}
+                </div>
+                <div class="col-1"></div>
+            </div>
+        </div>
+
+    </nav>
     </div>
+
+
     <div class="container">
         <div class="row">
-            <div class="col"></div>
-            <div class="col-md-8">
+            <div class="offset-1 col-md-10 col-sm-10">
                 {% block content %}
                 {% endblock %}
             </div>
-            <div class="col"></div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
