--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,49 +1,45 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-<div class="post">
-    <h2>{{ post.title }}</h2>
+<div class="border border-white rounded mb-4 bg-secondary">
+    <h2 class="m-4">{{ post.title | title}}</h2>
     {% if post.published_date %}
-    <div class="date">
+    <div class="date m-4">
         {{ post.published_date }}
     </div>
     {% else %}
-    <a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
+    <a class="btn btn-default m-4" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
     {% endif %}
     {% if user.is_authenticated %}
-    <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span
-            class="glyphicon glyphicon-pencil"></span></a>
-    <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}"><span
-            class="glyphicon glyphicon-remove"></span></a>
+    <div class="m-4">
+    <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}">Edit</a>
+    <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}">Delete</a>
+    </div>
     {% endif %}
-    <p>{{ post.text|linebreaksbr }}</p>
-    <div id="vote-section">
-        <div>
+    <p class="m-4">{{ post.text|linebreaksbr }}</p>
+    <div class="d-flex m-4">
+        <div class="d-flex">
             <a href="{% url 'add_reaction' pk=post.pk reaction_type='like' %}"><img
-                    src="https://rerollcdn.com/GENSHIN/Skills/2021/Fantastic_Voyage.png"></a>
+                    src="../../static/img/arrowup.png" id="arrow-up"></a>
             <p>{{ post.likeCount }}</p>
-            <p>{{post.like_percentage}}%</p> 
         </div>
-        <div>
+        <div class="d-flex">
             <a href="{% url 'add_reaction' pk=post.pk reaction_type='dislike' %}">
-                <img id="dislikeButton" src="https://rerollcdn.com/GENSHIN/Skills/2021/Fantastic_Voyage.png">
+                <img id="arrow-down" src="../../static/img/arrowup.png">
             </a>
-            <p>{{ post.dislikeCount }}</p>  
-            <p>{{post.dislike_percentage}}%</p>
+            <p>{{ post.dislikeCount }}</p>
         </div>
     </div>
     <hr>
     
     {% for comment in post.comments.all %}
     {% if user.is_authenticated or comment.approved_comment %}
-    <div class="comment">
+    <div class="comment m-4">
         <div class="date">
             {{ comment.created_date }}
             {% if not comment.approved_comment %}
-            <a class="btn btn-default" href="{% url 'comment_remove' pk=comment.pk %}"><span
-                    class="glyphicon glyphicon-remove"></span></a>
-            <a class="btn btn-default" href="{% url 'comment_approve' pk=comment.pk %}"><span
-                    class="glyphicon glyphicon-ok"></span></a>
+            <a class="btn btn-default" href="{% url 'comment_remove' pk=comment.pk %}">Delete</a>
+            <a class="btn btn-default" href="{% url 'comment_approve' pk=comment.pk %}">Approve</a>
             {% endif %}
         </div>
         <strong>{{ comment.author }}</strong>
@@ -51,8 +47,8 @@
     </div>
     {% endif %}
     {% empty %}
-    <p>No comments here yet :(</p>
+    <p class="m-4">No comments here yet :(</p>
     {% endfor %}
-    <a class="btn btn-default" href="{% url 'add_comment_to_post' pk=post.pk %}">Add comment</a>
+    <a class="btn btn-default m-4" href="{% url 'add_comment_to_post' pk=post.pk %}">Add comment</a>
 </div>
 {% endblock %}
