--- a/stats/templates/stats/champion_stats.html
+++ b/stats/templates/stats/champion_stats.html
@@ -2,7 +2,6 @@
 
 {% block content %}
 {% load static %}
-{% load stats_extras %}
 <div id="filters" class="">
         <div class="row">
                 <div class="col-sm-2 col-md-6 justify-content-between">
@@ -40,10 +39,10 @@
     {% for i in champion_stats %}
     <tr class="border-light">
         <td class="text-justify"><img class="rounded-circle" style="width:30px;height: 30px;"
-                src="{{ i.class_lower_case | get_image_url:'champion_class_image' }}"
+                src="{{ i.champion_class_image }}"
                 alt=""></td>
         <td class="text-justify"><img class="rounded-circle" style="width: 30px; height: 30px; margin-right: 10px;"
-                src="{{ i.name | get_image_url:'champion_image' }}">{{i.formated_name}}
+                src="{{ i.champion_image }}">{{i.formated_name}}
         </td>
         <td class="text-justify">{{ i.winrate }}%</td>
         <td class="text-justify">{{i.talent}}</td>
