--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -5,20 +5,20 @@
         <p>Your username and password didn't match. Please try again.</p>
     {% endif %}
 
-    <form method="post" action="{% url 'login' %}">
+    <form method="post" action="{% url 'login' %}" class="text-dark">
     {% csrf_token %}
         <table>
         <tr>
-            <td>{{ form.username.label_tag }}</td>
-            <td>{{ form.username }}</td>
+            <td class="text-dark">{{ form.username.label_tag }}</td>
+            <td class="text-dark">{{ form.username }}</td>
         </tr>
         <tr>
-            <td>{{ form.password.label_tag }}</td>
-            <td>{{ form.password }}</td>
+            <td class="text-dark">{{ form.password.label_tag }}</td>
+            <td style="color: black !important;">{{ form.password }}</td>
         </tr>
         </table>
 
-        <input type="submit" value="login" />
-        <input type="hidden" name="next" value="{{ next }}" />
+        <input type="submit" value="Login"  class="text-dark"/>
+        <input type="hidden" name="next" value="{{ next }}"  class="text-dark"/>
     </form>
 {% endblock %}
