--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -25,15 +25,15 @@
                 </div>
                 <div class="col d-flex justify-content-end">
                     <div class="ml-4 dropdown">
+                        {% if user.is_authenticated %}  
                         <button class="btn btn-secondary dropdown-toggle btn-sm" type="button" id="dropdownMenuButton"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Blog
-                        </button>
+                        </button>                      
                         <div class="dropdown-menu ml-4 " aria-labelledby="dropdownMenuButton" href="/stats">
-                            {% if user.is_authenticated %}
-                            <span class=" ml-4">{{ user.username }}</span>
-                            <a class="dropdown-item ml-4" href="{% url 'post_new' %}"></a>
-                            <a class=" ml-4" href="{% url 'post_draft_list' %}"></a>
+                            <p class="dropdown-item">{{ user.username }}</p>
+                            <a class="dropdown-item" href="{% url 'post_new' %}">Create Post</a>
+                            <a class="dropdown-item" href="{% url 'post_draft_list' %}">Draft Posts</a>
                             <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
                             {% else %}
                             <a class="dropdown-item ml-4" href="{% url 'login' %}">Login</a>
@@ -57,9 +57,6 @@
         </div>
 
     </nav>
-    </div>
-
-
     <div class="container">
         <div class="row">
             <div class="offset-1 col-md-10 col-sm-10">
@@ -68,9 +65,16 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
+        integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
+        integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
