--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,5 +1,7 @@
 {% extends 'blog/base.html' %}
 
+{% load crispy_forms_tags %}
+
 {% block content %}
 <div class="border border-white rounded mb-4 bg-secondary">
     <h2 class="m-4">{{ post.title | title}}</h2>
