--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -1,10 +1,11 @@
 {% extends "blog/base.html" %}
 
+{% load crispy_forms_tags %}
+
 {% block content %}
     {% if form.errors %}
         <p>Your username and password didn't match. Please try again.</p>
     {% endif %}
-
     <form method="post" action="{% url 'login' %}" class="text-dark">
     {% csrf_token %}
         <table>
@@ -21,4 +22,4 @@
         <input type="submit" value="Login"  class="text-dark"/>
         <input type="hidden" name="next" value="{{ next }}"  class="text-dark"/>
     </form>
-{% endblock %}
+    {% endblock %}
