--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     <link rel="icon" type="image/png" href="../../static/img/favicon.png">
 </head>
@@ -34,15 +35,12 @@
                         </button>
                         {% if user.is_authenticated %}
                         <div class="dropdown-menu ml-4 " aria-labelledby="dropdownMenuButton" href="/stats">
-                            <p class="dropdown-item">{{ user.username }}</p>
                             <a class="dropdown-item" href="/">See Posts</a>
                             <a class="dropdown-item" href="{% url 'post_new' %}">Create Post</a>
                             <a class="dropdown-item" href="{% url 'post_draft_list' %}">Draft Posts</a>
-                            <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
                             {% else %}
                             <div class="dropdown-menu ml-4 " aria-labelledby="dropdownMenuButton" href="/stats">
                                 <a class="dropdown-item" href="/">See Posts</a>
-                                <a class="dropdown-item" href="{% url 'login' %}">Login</a>
                                 {% endif %}
                             </div>
                         </div>
@@ -58,7 +56,26 @@
                                 <a class="dropdown-item" href="/stats/map">Maps</a>
                             </div>
                         </div>
+                        <div class="ml-4 dropdown">
+                            <button class="btn btn-secondary dropdown-toggle btn-sm" type="button"
+                                id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                                aria-expanded="false">
+                                Account
+                            </button>
+                            <div class="dropdown-menu ml-4 " aria-labelledby="dropdownMenuButton" href="/stats">
+                                {% if user.is_authenticated %}
+                                <p class="dropdown-item">{{ user.username }}</p>
+                                <a class="dropdown-item" href="/users/">List Users</a>
+                                <a class="dropdown-item" href="/accounts/signup/">Sign Up</a>
+                                <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+                                {% else %}
+                                <a class="dropdown-item" href="/accounts/login/">Sign In</a>
+                                <a class="dropdown-item" href="/accounts/signup/">Sign Up</a>
+                                {% endif %}
+                            </div>
+                        </div>
                     </div>
+                    
                     <div class="col-1"></div>
                 </div>
             </div>
