added ajax tables, loggers, json requests, fixed layout

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -3,6 +3,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+select>option{
+    color: black !important;
+}
+
 body{ 
     min-height: 100vh; 
     margin: 0; 
