--- a/users/templates/registration/signup.html
+++ b/users/templates/registration/signup.html
@@ -1,10 +1,14 @@
 {% extends 'blog/base.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
     <h1>Sign up</h1>
+    {% csrf_token %}
+    {% crispy form %}
+    <!-- 
     <form action="" method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Sign up" class="btn btn-secondary">
-    </form>
+    </form> -->
 {% endblock %}
