--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -3,6 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+    {% crispy form %}
     {% if form.errors %}
         <p>Your username and password didn't match. Please try again.</p>
     {% endif %}
