--- a/stats/templates/stats/card_stats.html
+++ b/stats/templates/stats/card_stats.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% load static %}
 
-<table class="table table-hover table-dark mt-4 shadow border border-dark rounded">
+<table id="card_table" class="table table-hover table-dark mt-4 shadow border border-dark rounded">
     <thead class="thead-dark">
         <tr>
             <th>Champion</th>
@@ -14,21 +14,18 @@
             <th>Match Count</th>
         </tr>
     </thead>
-    {% if card_stats %}
-    {% for i in card_stats %}
-    <tr class="border-light">
-        <td class="text-justify"><img class="rounded-circle" style="width: 30px; height: 30px; margin-right: 10px;"
-                src="{{ i.champion.champion_image }}" alt="Image showing the face of the champion {{i.champion.formated_name | title }}">{{i.champion.formated_name}}
-        </td>
-        <td>{{i.talent_name_formated}}</td>
-        <td>{{i.card_name_formated}}</td>
-        <td class="text-justify">{{i.card_level}}</td>
-        <td class="text-justify">{{ i.winrate }}%</td>
-        <td class="text-justify">{{i.match_count}}</td>
-    </tr>
-
-    {% endfor %}
-    {% endif %}
-
 </table>
+<script>
+    $(document).ready(function () {
+        $('#card_table').DataTable({
+            "processing": false,
+            serverSide: false,
+            ajax: {
+                url: 'http://127.0.0.1:8000/stats/cardajax',
+                dataSrc: 'card_stats',
+            },
+        });
+    });
+
+</script>
 {% endblock %}
