--- a/stats/templates/stats/champion_stats.html
+++ b/stats/templates/stats/champion_stats.html
@@ -2,30 +2,8 @@
 
 {% block content %}
 {% load static %}
-<div id="filters" class="">
-        <div class="row">
-                <div class="col-sm-2 col-md-6 justify-content-between">
-                        <a href="{% url 'get_champion_stats'%}"><button type="button" class="btn btn-secondary">All</button></a>
-                        <a href="{% url 'get_champion_stats' sort_type='winrate' class_filter='Damage'%}"><button type="button"
-                                class="btn btn-secondary">Damage</button></a>
-                        <a href="{% url 'get_champion_stats' sort_type='winrate' class_filter='Frontline'%}"><button type="button"
-                                class="btn btn-secondary">Frontline</button></a>
-                        <a href="{% url 'get_champion_stats' sort_type='winrate' class_filter='Flank'%}"><button type="button"
-                                class="btn btn-secondary">Flank</button></a>
-                        <a href="{% url 'get_champion_stats' sort_type='winrate' class_filter='Support'%}"><button type="button"
-                                class="btn btn-secondary">Support</button></a>
-                        </div>
-                        <div class="col-sm-2 col-md-6 d-flex justify-content-end">
-                                <a href="{% url 'get_champion_stats' sort_type='match_count' class_filter='All'%}"><button type="button"
-                                class="btn btn-secondary">Match Count</button></a>
-                        <a href="{% url 'get_champion_stats' sort_type='winrate' class_filter='All'%}"><button type="button"
-                                class="btn btn-secondary">Winrate</button></a>
-                        <a href="{% url 'get_champion_stats' sort_type='name' class_filter='All'%}"><button type="button"
-                                class="btn btn-secondary">Alfabetic</button></a>
-                        </div>
-        </div>
-</div>
-<table class="table table-hover table-dark mt-4 shadow border border-dark rounded">
+
+<table id="champion_table" class="table table-hover table-dark mt-4 shadow border border-dark rounded">
     <thead class="thead-dark">
         <tr>
             <th>Class</th>
@@ -35,22 +13,18 @@
             <th>Match Count</th>
         </tr>
     </thead>
-    {% if champion_stats %}
-    {% for i in champion_stats %}
-    <tr class="border-light">
-        <td class="text-justify"><img class="rounded-circle" style="width:30px;height: 30px;"
-                src="{{ i.champion_class_image }}"
-                alt="Image representing the class {{i.champion_class}}"></td>
-        <td class="text-justify"><img class="rounded-circle" style="width: 30px; height: 30px; margin-right: 10px;"
-                src="{{ i.champion_image }}" alt="Image showing the face of the champion {{i.name | title }}">{{i.formated_name}}
-        </td>
-        <td class="text-justify">{{ i.winrate }}%</td>
-        <td class="text-justify">{{i.talent}}</td>
-        <td class="text-justify">{{i.match_count}}</td>
-    </tr>
-
-    {% endfor %}
-    {% endif %}
-
 </table>
+<script>
+        $(document).ready(function () {
+            $('#champion_table').DataTable({
+                "processing": false,
+                serverSide: false,
+                ajax: {
+                    url: 'http://127.0.0.1:8000/stats/championajax',
+                    dataSrc: 'champion_stats',
+                },
+            });
+        });
+    
+    </script>
 {% endblock %}
