--- a/stats/templates/stats/card_stats.html
+++ b/stats/templates/stats/card_stats.html
@@ -21,7 +21,7 @@
             "processing": false,
             serverSide: false,
             ajax: {
-                url: 'http://127.0.0.1:8000/stats/cardajax',
+                url: 'https://gustavopirro.pythonanywhere.com/stats/cardajax',
                 dataSrc: 'card_stats',
             },
         });
