--- a/stats/templates/stats/champion_stats.html
+++ b/stats/templates/stats/champion_stats.html
@@ -20,7 +20,7 @@
                 "processing": false,
                 serverSide: false,
                 ajax: {
-                    url: 'http://127.0.0.1:8000/stats/championajax',
+                    url: 'https://gustavopirro.pythonanywhere.com/stats/championajax',
                     dataSrc: 'champion_stats',
                 },
             });
