--- a/stats/templates/stats/map_stats.html
+++ b/stats/templates/stats/map_stats.html
@@ -19,7 +19,7 @@
                 "processing": false,
                 serverSide:false,
                 ajax: {
-                    url:'http://127.0.0.1:8000/stats/mapajax',
+                    url:'https://gustavopirro.pythonanywhere.com/stats/mapajax',
                     dataSrc:'map_stats',
                 },
             });
