--- a/templates/stats/champion_stats.html
+++ b/templates/stats/champion_stats.html
@@ -20,11 +20,14 @@
                 "processing": false,
                 serverSide: false,
                 ajax: {
-                    url: 'https://gustavopirro.pythonanywhere.com/stats/championajax',
+                    url: 'ajax/',
                     dataSrc: 'champion_stats',
                 },
             });
+
         });
+
+
     
     </script>
 {% endblock %}
