--- a/templates/stats/map_stats.html
+++ b/templates/stats/map_stats.html
@@ -19,7 +19,7 @@
                 "processing": false,
                 serverSide:false,
                 ajax: {
-                    url:'https://gustavopirro.pythonanywhere.com/stats/mapajax',
+                    url:'ajax/',
                     dataSrc:'map_stats',
                 },
             });
